--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,52 @@
     transform: rotate(360deg);
   }
 }
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+button {
+  font-size: 16px;
+  padding: 15px;
+  font-weight: bold;
+  border-radius: 5px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.smallButton {
+  height: 1.5em;
+  font-size: 0.8em;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  border: 1px solid rgb(255, 255, 255);
+  width: 7em;
+  margin: auto;
+  background: rgba(21, 255, 0, 0.609);
+  color: white;
+  font-weight: bold;
+}
+
+p {
+  font-size: 0.8em;
+  color: white;
+}
+
+.bal {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: rgb(0, 211, 0);
+}
